app/assets/stylesheets/components/sharing_buttons/_sharing_buttons.scss
.sharing {
  @extend .unstyled-list;
  overflow: hidden;
  margin: baseline-unit(6) 0;

  @include respond-to($mq-two-col) {
    margin: baseline-unit(2) 0;
    position: fixed;
    top: 300px;
    right: 0;
    z-index: $z-foreground;
  }
}

.sharing__item {
  float: left;
  margin-bottom: 0;

  @include respond-to($mq-two-col) {
    float: none;
  }
}

.sharing__button {
  display: block;
  width: 44px;
  height: 44px;
  background-repeat: no-repeat;
  background-position: 0 0;
  background-image: asset-url('sharing/sharing-sprite.png');

  .svg & {
    background-position: 0 0;
  }
}

.sharing__button--facebook {
  background-color: $facebook-blue;
  &:hover,
  &:focus {
    background-color: $facebook-blue--hover;
  }

  .svg & {
    background-image: asset-url('sharing/facebook.svg');
  }
}

.sharing__button--twitter {
  background-color: $twitter-blue;
  background-position: -44px 0px;
  &:hover,
  &:focus {
    background-color: $twitter-blue--hover;
  }

  .svg & {
    background-image: asset-url('sharing/twitter.svg');
  }
}

.sharing__button--google {
  background-color: $google-plus-red;
  background-position: -132px 0;
  &:hover,
  &:focus {
    background-color: $google-plus-red--hover;
  }

  .svg & {
    background-image: asset-url('sharing/google-plus.svg');
  }
}

.sharing__button--pinterest {
  background-color: $pinterest-red;
  background-position: -88px 0;
  &:hover,
  &:focus {
    background-color: $pinterest-red--hover;
  }

  .svg & {
    background-image: asset-url('sharing/pinterest.svg');
  }
}

.sharing__button--email {
  background-color: $email-grey;
  background-position: -220px 0;
  &:hover,
  &:focus {
    background-color: $email-grey--hover;
  }

  .svg & {
    background-image: asset-url('sharing/email.svg');
  }
}

.sharing__button--print {
  background-color: $print-grey;
  background-position: -176px 0;
  &:hover,
  &:focus {
    background-color: $print-grey--hover;
  }

  .svg & {
    background-image: asset-url('sharing/print.svg');
  }
}

